# liboqs-python

./: .gitignore  README.md  build.sh  compile.sh  oqspython.i  pip-install.sh  pyproject.toml
