[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oqspython"
dynamic = ["version"]
description = 'Python wrapper for LibOQS'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Petr Muzikant", email = "petr.muzikant@cyber.ee" },
]
dependencies = []

[tool.hatch.build]
artifacts = [
  "*.so",
]

[tool.hatch.version]
path = "version.py"

[tool.hatch.envs.default]
pre-install-commands = [
  "compile.sh"
]